<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="camerax">CameraX</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="add_story">Add Story</string>
    <string name="superstory">SuperStory</string>
    <string name="author">Author:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="detail_title_page">Detail</string>
    <string name="post">Post</string>
    <string name="retry">RETRY</string>
</resources>