<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="56sp"
        android:layout_height="56sp"
        android:padding="12dp"
        android:layout_gravity="start"
        android:scaleType="fitCenter"
        android:background="@null"
        app:tint="@color/black"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:lines="2"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/grotesk"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/ib_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:inputType="text"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:hint="@string/name"
            android:background="@drawable/text_background"
            app:layout_constraintBottom_toTopOf="@+id/ed_register_email"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container" />

        <com.example.storyapp.components.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_background"
            app:layout_constraintBottom_toTopOf="@+id/ed_register_password"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"/>

        <com.example.storyapp.components.PassEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:singleLine="true"
            android:paddingHorizontal="8dp"
            android:inputType="textPassword"
            android:background="@drawable/text_background"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"/>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_divider"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_divider"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:fontFamily="@font/sequel_sans"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/or"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>