<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        tools:ignore="MissingConstraints">


        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="56sp"
            android:layout_height="56sp"
            android:background="@null"
            android:paddingVertical="12dp"
            android:fontFamily="@font/grotesk"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@android:color/black"
        />


    <EditText
        android:id="@+id/ed_description"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/description"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:padding="16dp"
        android:background="@drawable/text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/galleryButton"
        app:layout_constraintTop_toBottomOf="@id/previewImageView" />

    <ImageView
        android:id="@+id/cameraXButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingVertical="12dp"
        android:layout_marginEnd="16dp"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@id/ed_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_camera"
        app:tint="?attr/colorPrimary"
        />

    <ImageView
        android:id="@+id/galleryButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="@id/ed_description"
        app:layout_constraintEnd_toStartOf="@id/cameraXButton"
        app:layout_constraintTop_toTopOf="@id/ed_description"
        app:srcCompat="@drawable/ic_gallery"
        app:tint="?attr/colorPrimary"
        />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_description"
        />

    <!--    <Button-->
    <!--        android:id="@+id/uploadButton"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="56dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/upload"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

